--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"@fastify/compress": "^6.4.0",
 		"@fastify/cors": "^8.3.0",
 		"fastify": "^4.18.0",
+		"fastify-plugin": "^4.5.0",
 		"satori": "^0.10.1",
-		"simple-icons": "^9.1.0",
-		"yoga-wasm-web": "^0.3.3"
+		"simple-icons": "^9.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20.3.1",
