--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "tsup-node --env.MODE development --onSuccess \"node main.js\"",
+		"test": "vitest run",
 		"build": "tsup-node --env.MODE production",
 		"preview": "node main.js",
 		"start": "node main.js"
@@ -10,15 +11,17 @@
 	"dependencies": {
 		"@fastify/compress": "^6.4.0",
 		"@fastify/cors": "^8.3.0",
-		"fastify": "^4.18.0",
+		"fastify": "^4.19.1",
 		"fastify-plugin": "^4.5.0",
 		"satori": "^0.10.1",
-		"simple-icons": "^9.1.0"
+		"simple-icons": "^9.4.0",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20.3.1",
-		"terser": "^5.18.0",
-		"tsup": "^7.0.0",
-		"typescript": "^5.1.3"
+		"@types/node": "^20.3.3",
+		"terser": "^5.18.2",
+		"tsup": "^7.1.0",
+		"typescript": "^5.1.6",
+		"vitest": "^0.32.2"
 	}
 }
